<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandwich Shop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rb_text_wheat">Wheat</string>
    <string name="rb_text_white">White</string>
    <string name="rb_text_rye">Rye</string>
    <string name="chk_text_lettuce">Lettuce</string>
    <string name="chk_text_tomato">Tomato</string>
    <string name="chk_text_potato_chips">Potato Chips</string>
    <string name="chk_text_onions">Onions</string>
    <string name="chk_text_bacon">Bacon</string>
    <string name="chk_text_mayo">Mayo</string>
    <string name="chk_text_ketchup">Ketchup</string>
    <string name="chk_text_butter">Butter</string>
    <string name="btn_text_place_order">Place Order</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="Lbl_text_success_message">You have successfully placed your order</string>
    <string name="title_activity_sandwich_count">SandwichCount</string>
    <string name="txt_message_sand_count">Please select the number of sandwich</string>
    <string name="btn_continue">Continue</string>
    <string name="lbl_title_bread">Bread</string>
    <string name="txt_title_bread">Bread</string>
    <string name="txt_title_toppings">Toppings</string>
    <string name="txt_title_sandwich">Sandwich N° %s</string>

</resources>
